Add Step 5/6 for POFO and PFRS
* Add Step 5 for both
* Update step 6 to be generic for all types

--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/additional-information.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/additional-information.component.html
@@ -26,8 +26,8 @@
 <form [formGroup]="form">
   <div class="form-row">
     <div class="full-row">
-      <label for="is-new-structure"> Are you removing soil in order to build a structure? </label>
-      <div class="subtext">Structures include farm buildings, residences, or accessory buildings</div>
+      <label for="is-new-structure"> {{ firstQuestion }}</label>
+      <div class="subtext">This can include farm buildings, residences, or accessory buildings.</div>
       <div>
         <mat-button-toggle-group
           class="input"
