--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/soil-removal-confirmation-dialog/soil-removal-confirmation-dialog.component.scss
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/additional-information/soil-removal-confirmation-dialog/soil-removal-confirmation-dialog.component.scss
@@ -1,4 +1,4 @@
-@use '../../../../../../../styles/functions' as *;
+@use '../../../../../../styles/functions' as *;
 
 .margin-bottom-1 {
   margin-bottom: rem(16);
