--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/edit-submission.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/edit-submission.component.html
@@ -87,20 +87,37 @@
         (exit)="onExit()"
       >
       </app-roso-proposal>
+      <app-pofo-proposal
+        *ngIf="noiSubmission.typeCode === 'POFO'"
+        [$noiSubmission]="$noiSubmission"
+        [$noiDocuments]="$noiDocuments"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="switchStep($event)"
+        (exit)="onExit()"
+      >
+      </app-pofo-proposal>
+      <app-pfrs-proposal
+        *ngIf="noiSubmission.typeCode === 'PFRS'"
+        [$noiSubmission]="$noiSubmission"
+        [$noiDocuments]="$noiDocuments"
+        [showErrors]="showValidationErrors"
+        (navigateToStep)="switchStep($event)"
+        (exit)="onExit()"
+      >
+      </app-pfrs-proposal>
     </div>
   </cdk-step>
   <cdk-step label="Additional Information">
     <ng-container *ngTemplateOutlet="header"></ng-container>
     <div *ngIf="noiSubmission && cdkStepper.selectedIndex === steps.ExtraInfo">
-      <app-roso-additional-information
-        *ngIf="noiSubmission.typeCode === 'ROSO'"
+      <app-additional-information
         [$noiSubmission]="$noiSubmission"
         [$noiDocuments]="$noiDocuments"
         [showErrors]="showValidationErrors"
         [draftMode]="true"
         (navigateToStep)="switchStep($event)"
         (exit)="onExit()"
-      ></app-roso-additional-information>
+      ></app-additional-information>
     </div>
   </cdk-step>
   <cdk-step label="Upload Attachments">
