--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pfrs-details/pfrs-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pfrs-details/pfrs-details.component.html
@@ -37,59 +37,100 @@
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilTypeRemoved"></app-no-data>
   </div>
 
-  <div class="subheading1 full-width"></div>
-  <div class="full-width soil-table">
-    <div class="grid-1"></div>
-    <div class="grid-2">
-      <strong>Soil to be Removed</strong>
-      <app-updated-banner *ngIf="updatedFields.includes('soilToRemoveVolume')"></app-updated-banner>
-    </div>
-    <div class="grid-1"><strong>Volume</strong></div>
-    <div class="grid-2">
-      {{ _noiSubmission.soilToRemoveVolume }}
-      <span *ngIf="_noiSubmission.soilToRemoveVolume">m<sup>3</sup></span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveVolume"></app-no-data>
-    </div>
-    <div class="grid-1"><strong>Area</strong></div>
-    <div class="grid-2">
-      {{ _noiSubmission.soilToRemoveArea }} <span *ngIf="_noiSubmission.soilToRemoveArea">ha</span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveArea"></app-no-data>
-    </div>
-    <div class="grid-1"><strong>Maximum Depth</strong></div>
-    <div class="grid-2">
-      {{ _noiSubmission.soilToRemoveMaximumDepth }}
-      <span *ngIf="_noiSubmission.soilToRemoveMaximumDepth">m</span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveMaximumDepth"></app-no-data>
-    </div>
-    <div class="grid-1"><strong>Average Depth</strong></div>
-    <div class="grid-2">
-      {{ _noiSubmission.soilToRemoveAverageDepth }}
-      <span *ngIf="_noiSubmission.soilToRemoveAverageDepth">m</span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveAverageDepth"></app-no-data>
-    </div>
+  <div class="subheading2 grid-1">
+    Describe the type, origin and quality of fill proposed to be placed.
+    <app-updated-banner *ngIf="updatedFields.includes('soilFillTypeToPlace')"></app-updated-banner>
+  </div>
+  <div class="grid-double">
+    {{ _noiSubmission.soilFillTypeToPlace }}
+    <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilFillTypeToPlace"></app-no-data>
   </div>
 
-  <div class="subheading1 full-width"></div>
-  <div class="full-width soil-table">
-    <div class="grid-1"></div>
-    <div class="grid-2">
-      <strong>Soil already Removed</strong>
-      <app-updated-banner *ngIf="updatedFields.includes('subdProposedLots')"></app-updated-banner>
+  <div *ngIf="_noiSubmission" class="full-width soil-table">
+    <div></div>
+    <div><strong>Soil to be Removed</strong></div>
+    <div><strong>Fill to be Placed</strong></div>
+
+    <div><strong>Volume</strong></div>
+    <div>
+      {{ _noiSubmission.soilToRemoveVolume }}
+      <span *ngIf="_noiSubmission.soilToRemoveVolume !== null">m<sup>3</sup></span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToRemoveVolume === null"></app-no-data>
     </div>
-    <div class="grid-1"><strong>Volume</strong></div>
-    <div class="grid-2">
+    <div>
+      {{ _noiSubmission.soilToPlaceVolume }}
+      <span *ngIf="_noiSubmission.soilToPlaceVolume !== null">m<sup>3</sup></span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToPlaceVolume === null"></app-no-data>
+    </div>
+
+    <div><strong>Area</strong></div>
+    <div>
+      {{ _noiSubmission.soilToRemoveArea }}
+      <span *ngIf="_noiSubmission.soilToRemoveArea !== null">ha</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToRemoveArea === null"></app-no-data>
+    </div>
+    <div>
+      {{ _noiSubmission.soilToPlaceArea }}
+      <span *ngIf="_noiSubmission.soilToPlaceArea !== null">ha</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToPlaceArea === null"></app-no-data>
+    </div>
+
+    <div><strong>Maximum Depth</strong></div>
+    <div>
+      {{ _noiSubmission.soilToRemoveMaximumDepth }}
+      <span *ngIf="_noiSubmission.soilToRemoveMaximumDepth !== null">m</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToRemoveMaximumDepth === null"></app-no-data>
+    </div>
+    <div>
+      {{ _noiSubmission.soilToPlaceMaximumDepth }}
+      <span *ngIf="_noiSubmission.soilToPlaceMaximumDepth !== null">m</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToPlaceMaximumDepth === null"></app-no-data>
+    </div>
+
+    <div><strong>Average Depth</strong></div>
+    <div>
+      {{ _noiSubmission.soilToRemoveAverageDepth }}
+      <span *ngIf="_noiSubmission.soilToRemoveAverageDepth !== null">m</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToRemoveAverageDepth === null"></app-no-data>
+    </div>
+    <div>
+      {{ _noiSubmission.soilToPlaceAverageDepth }}
+      <span *ngIf="_noiSubmission.soilToPlaceAverageDepth !== null">m</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilToPlaceAverageDepth === null"></app-no-data>
+    </div>
+
+    <div class="spacer-row"></div>
+
+    <div></div>
+    <div><strong>Soil already Removed</strong></div>
+    <div><strong>Fill already Placed</strong></div>
+
+    <div><strong>Volume</strong></div>
+    <div>
       {{ _noiSubmission.soilAlreadyRemovedVolume }}
       <span *ngIf="_noiSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
       <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyRemovedVolume === null"></app-no-data>
     </div>
-    <div class="grid-1"><strong>Area</strong></div>
-    <div class="grid-2">
+    <div>
+      {{ _noiSubmission.soilAlreadyPlacedVolume }}
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedVolume !== null">m<sup>3</sup></span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyPlacedVolume === null"></app-no-data>
+    </div>
+
+    <div><strong>Area</strong></div>
+    <div>
       {{ _noiSubmission.soilAlreadyRemovedArea }}
       <span *ngIf="_noiSubmission.soilAlreadyRemovedArea !== null">ha</span>
       <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyRemovedArea === null"></app-no-data>
     </div>
-    <div class="grid-1"><strong>Maximum Depth</strong></div>
-    <div class="grid-2">
+    <div>
+      {{ _noiSubmission.soilAlreadyPlacedArea }}
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedArea !== null">ha</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyPlacedArea === null"></app-no-data>
+    </div>
+
+    <div><strong>Maximum Depth</strong></div>
+    <div>
       {{ _noiSubmission.soilAlreadyRemovedMaximumDepth }}
       <span *ngIf="_noiSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
       <app-no-data
@@ -97,13 +138,30 @@
         *ngIf="_noiSubmission.soilAlreadyRemovedMaximumDepth === null"
       ></app-no-data>
     </div>
-    <div class="grid-1"><strong>Average Depth</strong></div>
-    <div class="grid-2">
+    <div>
+      {{ _noiSubmission.soilAlreadyPlacedMaximumDepth }}
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedMaximumDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_noiSubmission.soilAlreadyPlacedMaximumDepth === null"
+      ></app-no-data>
+    </div>
+
+    <div><strong>Average Depth</strong></div>
+    <div>
       {{ _noiSubmission.soilAlreadyRemovedAverageDepth }}
       <span *ngIf="_noiSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
       <app-no-data
         [showRequired]="showErrors"
         *ngIf="_noiSubmission.soilAlreadyRemovedAverageDepth === null"
+      ></app-no-data>
+    </div>
+    <div>
+      {{ _noiSubmission.soilAlreadyPlacedAverageDepth }}
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedAverageDepth !== null">m</span>
+      <app-no-data
+        [showRequired]="showErrors"
+        *ngIf="_noiSubmission.soilAlreadyPlacedAverageDepth === null"
       ></app-no-data>
     </div>
   </div>
@@ -134,6 +192,14 @@
     <app-no-data [showRequired]="showErrors" *ngIf="proposalMap.length === 0"></app-no-data>
   </div>
 
+  <div class="subheading2 grid-1">Is your proposal for area-wide filling?</div>
+  <div class="grid-double">
+    <span *ngIf="_noiSubmission.soilIsAreaWideFilling !== null">
+      {{ _noiSubmission.soilIsAreaWideFilling ? 'Yes' : 'No' }}
+    </span>
+    <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilIsAreaWideFilling === null"></app-no-data>
+  </div>
+
   <div class="subheading2 grid-1">Is your proposal for aggregate extraction or placer mining?</div>
   <div class="grid-double">
     <span *ngIf="_noiSubmission.soilIsExtractionOrMining !== null">
@@ -142,7 +208,7 @@
     <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilIsExtractionOrMining === null"></app-no-data>
   </div>
 
-  <ng-container *ngIf="_noiSubmission?.soilIsExtractionOrMining">
+  <ng-container *ngIf="_noiSubmission.soilIsExtractionOrMining || _noiSubmission.soilIsAreaWideFilling">
     <div class="subheading2 grid-1">Cross Sections</div>
     <div class="grid-double">
       <a *ngFor="let file of crossSections" (click)="openFile(file.uuid)">
@@ -159,15 +225,17 @@
       <app-no-data [showRequired]="showErrors" *ngIf="crossSections.length === 0"></app-no-data>
     </div>
 
-    <div class="subheading2 grid-1">
-      Have you submitted a Notice of Work to the Ministry of Energy, Mines and Low Carbon Innovation (EMLI)?
-    </div>
-    <div class="grid-double">
-      <span *ngIf="_noiSubmission.soilHasSubmittedNotice !== null">
-        {{ _noiSubmission.soilHasSubmittedNotice ? 'Yes' : 'No' }}
-      </span>
-      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilHasSubmittedNotice === null"></app-no-data>
-    </div>
+    <ng-container *ngIf="_noiSubmission.soilIsExtractionOrMining">
+      <div class="subheading2 grid-1">
+        Have you submitted a Notice of Work to the Ministry of Energy, Mines and Low Carbon Innovation (EMLI)?
+      </div>
+      <div class="grid-double">
+        <span *ngIf="_noiSubmission.soilHasSubmittedNotice !== null">
+          {{ _noiSubmission.soilHasSubmittedNotice ? 'Yes' : 'No' }}
+        </span>
+        <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilHasSubmittedNotice === null"></app-no-data>
+      </div>
+    </ng-container>
 
     <ng-container *ngIf="_noiSubmission.soilHasSubmittedNotice">
       <div class="subheading2 grid-1">Notice of Work</div>
