--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pofo-details/pofo-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pofo-details/pofo-details.component.html
@@ -29,81 +29,79 @@
   </div>
 
   <div class="subheading2 grid-1">
-    Describe the type of soil proposed to be removed.
-    <app-updated-banner *ngIf="updatedFields.includes('soilTypeRemoved')"></app-updated-banner>
+    Describe the type, origin and quality of fill proposed to be placed.
+    <app-updated-banner *ngIf="updatedFields.includes('soilFillTypeToPlace')"></app-updated-banner>
   </div>
   <div class="grid-double">
-    {{ _noiSubmission.soilTypeRemoved }}
-    <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilTypeRemoved"></app-no-data>
+    {{ _noiSubmission.soilFillTypeToPlace }}
+    <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilFillTypeToPlace"></app-no-data>
   </div>
 
-  <div class="subheading1 full-width"></div>
   <div class="full-width soil-table">
     <div class="grid-1"></div>
     <div class="grid-2">
-      <strong>Soil to be Removed</strong>
+      <strong> Fill to be Placed</strong>
+      <app-updated-banner *ngIf="updatedFields.includes('soilToPlaceVolume')"></app-updated-banner>
+    </div>
+    <div class="grid-1"><strong>Volume</strong></div>
+    <div class="grid-2">
+      {{ _noiSubmission.soilToPlaceVolume }}
+      <span *ngIf="_noiSubmission.soilToPlaceVolume">m<sup>3</sup></span>
+      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToPlaceVolume"></app-no-data>
+    </div>
+    <div class="grid-1"><strong>Area</strong></div>
+    <div class="grid-2">
+      {{ _noiSubmission.soilToPlaceArea }} <span *ngIf="_noiSubmission.soilToPlaceArea">ha</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToPlaceArea"></app-no-data>
+    </div>
+    <div class="grid-1"><strong>Maximum Depth</strong></div>
+    <div class="grid-2">
+      {{ _noiSubmission.soilToPlaceMaximumDepth }}
+      <span *ngIf="_noiSubmission.soilToPlaceMaximumDepth">m</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToPlaceMaximumDepth"></app-no-data>
+    </div>
+    <div class="grid-1"><strong>Average Depth</strong></div>
+    <div class="grid-2">
+      {{ _noiSubmission.soilToPlaceAverageDepth }}
+      <span *ngIf="_noiSubmission.soilToPlaceAverageDepth">m</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToPlaceAverageDepth"></app-no-data>
+    </div>
+  </div>
+
+  <div class="full-width soil-table">
+    <div class="grid-1"></div>
+    <div class="grid-2">
+      <strong> Fill already Placed</strong>
       <app-updated-banner *ngIf="updatedFields.includes('soilToRemoveVolume')"></app-updated-banner>
     </div>
     <div class="grid-1"><strong>Volume</strong></div>
     <div class="grid-2">
-      {{ _noiSubmission.soilToRemoveVolume }}
-      <span *ngIf="_noiSubmission.soilToRemoveVolume">m<sup>3</sup></span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveVolume"></app-no-data>
+      {{ _noiSubmission.soilAlreadyPlacedVolume }}
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedVolume !== null">m<sup>3</sup></span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyPlacedVolume === null"></app-no-data>
     </div>
     <div class="grid-1"><strong>Area</strong></div>
     <div class="grid-2">
-      {{ _noiSubmission.soilToRemoveArea }} <span *ngIf="_noiSubmission.soilToRemoveArea">ha</span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveArea"></app-no-data>
+      {{ _noiSubmission.soilAlreadyPlacedArea }}
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedArea !== null">ha</span>
+      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyPlacedArea === null"></app-no-data>
     </div>
     <div class="grid-1"><strong>Maximum Depth</strong></div>
     <div class="grid-2">
-      {{ _noiSubmission.soilToRemoveMaximumDepth }}
-      <span *ngIf="_noiSubmission.soilToRemoveMaximumDepth">m</span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveMaximumDepth"></app-no-data>
-    </div>
-    <div class="grid-1"><strong>Average Depth</strong></div>
-    <div class="grid-2">
-      {{ _noiSubmission.soilToRemoveAverageDepth }}
-      <span *ngIf="_noiSubmission.soilToRemoveAverageDepth">m</span>
-      <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilToRemoveAverageDepth"></app-no-data>
-    </div>
-  </div>
-
-  <div class="subheading1 full-width"></div>
-  <div class="full-width soil-table">
-    <div class="grid-1"></div>
-    <div class="grid-2">
-      <strong>Soil already Removed</strong>
-      <app-updated-banner *ngIf="updatedFields.includes('subdProposedLots')"></app-updated-banner>
-    </div>
-    <div class="grid-1"><strong>Volume</strong></div>
-    <div class="grid-2">
-      {{ _noiSubmission.soilAlreadyRemovedVolume }}
-      <span *ngIf="_noiSubmission.soilAlreadyRemovedVolume !== null">m<sup>3</sup></span>
-      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyRemovedVolume === null"></app-no-data>
-    </div>
-    <div class="grid-1"><strong>Area</strong></div>
-    <div class="grid-2">
-      {{ _noiSubmission.soilAlreadyRemovedArea }}
-      <span *ngIf="_noiSubmission.soilAlreadyRemovedArea !== null">ha</span>
-      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilAlreadyRemovedArea === null"></app-no-data>
-    </div>
-    <div class="grid-1"><strong>Maximum Depth</strong></div>
-    <div class="grid-2">
-      {{ _noiSubmission.soilAlreadyRemovedMaximumDepth }}
-      <span *ngIf="_noiSubmission.soilAlreadyRemovedMaximumDepth !== null">m</span>
+      {{ _noiSubmission.soilAlreadyPlacedMaximumDepth }}
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedMaximumDepth !== null">m</span>
       <app-no-data
         [showRequired]="showErrors"
-        *ngIf="_noiSubmission.soilAlreadyRemovedMaximumDepth === null"
+        *ngIf="_noiSubmission.soilAlreadyPlacedMaximumDepth === null"
       ></app-no-data>
     </div>
     <div class="grid-1"><strong>Average Depth</strong></div>
     <div class="grid-2">
-      {{ _noiSubmission.soilAlreadyRemovedAverageDepth }}
-      <span *ngIf="_noiSubmission.soilAlreadyRemovedAverageDepth !== null">m</span>
+      {{ _noiSubmission.soilAlreadyPlacedAverageDepth }}
+      <span *ngIf="_noiSubmission.soilAlreadyPlacedAverageDepth !== null">m</span>
       <app-no-data
         [showRequired]="showErrors"
-        *ngIf="_noiSubmission.soilAlreadyRemovedAverageDepth === null"
+        *ngIf="_noiSubmission.soilAlreadyPlacedAverageDepth === null"
       ></app-no-data>
     </div>
   </div>
@@ -112,14 +110,16 @@
     <h4>Project Duration</h4>
   </div>
   <div class="subheading2 grid-1">
-    Duration <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
+    Duration
+    <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _noiSubmission.soilProjectDurationUnit }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilProjectDurationUnit"></app-no-data>
   </div>
   <div class="subheading2 grid-1">
-    Length <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
+    Length
+    <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _noiSubmission.soilProjectDurationAmount }}
@@ -134,15 +134,15 @@
     <app-no-data [showRequired]="showErrors" *ngIf="proposalMap.length === 0"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Is your proposal for aggregate extraction or placer mining?</div>
+  <div class="subheading2 grid-1">Is your proposal for area-wide filling?</div>
   <div class="grid-double">
-    <span *ngIf="_noiSubmission.soilIsExtractionOrMining !== null">
-      {{ _noiSubmission.soilIsExtractionOrMining ? 'Yes' : 'No' }}
+    <span *ngIf="_noiSubmission.soilIsAreaWideFilling !== null">
+      {{ _noiSubmission.soilIsAreaWideFilling ? 'Yes' : 'No' }}
     </span>
-    <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilIsExtractionOrMining === null"></app-no-data>
+    <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilIsAreaWideFilling === null"></app-no-data>
   </div>
 
-  <ng-container *ngIf="_noiSubmission?.soilIsExtractionOrMining">
+  <ng-container *ngIf="_noiSubmission.soilIsAreaWideFilling">
     <div class="subheading2 grid-1">Cross Sections</div>
     <div class="grid-double">
       <a *ngFor="let file of crossSections" (click)="openFile(file.uuid)">
@@ -158,26 +158,6 @@
       </a>
       <app-no-data [showRequired]="showErrors" *ngIf="crossSections.length === 0"></app-no-data>
     </div>
-
-    <div class="subheading2 grid-1">
-      Have you submitted a Notice of Work to the Ministry of Energy, Mines and Low Carbon Innovation (EMLI)?
-    </div>
-    <div class="grid-double">
-      <span *ngIf="_noiSubmission.soilHasSubmittedNotice !== null">
-        {{ _noiSubmission.soilHasSubmittedNotice ? 'Yes' : 'No' }}
-      </span>
-      <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilHasSubmittedNotice === null"></app-no-data>
-    </div>
-
-    <ng-container *ngIf="_noiSubmission.soilHasSubmittedNotice">
-      <div class="subheading2 grid-1">Notice of Work</div>
-      <div class="grid-double">
-        <a *ngFor="let file of noticeOfWorks" (click)="openFile(file.uuid)">
-          {{ file.fileName }}
-        </a>
-        <app-no-data [showRequired]="showErrors" *ngIf="noticeOfWorks.length === 0"></app-no-data>
-      </div>
-    </ng-container>
   </ng-container>
 
   <div *ngIf="showEdit" class="edit-button">
