styles and tidy

--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/notice-of-intent-details.component.scss
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/notice-of-intent-details.component.scss
@@ -54,6 +54,7 @@
     grid-row-gap: 12px;
     overflow: unset;
   }
+
   .scrollable {
     overflow-x: auto;
   }
@@ -62,6 +63,7 @@
     display: grid;
     grid-template-columns: max-content max-content max-content;
     overflow-x: auto;
+    overflow-y: hidden;
     grid-column-gap: 36px;
     grid-row-gap: 12px;
 
