--- a/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/parcel/parcel.component.scss
+++ b/alcs-frontend/src/app/features/notice-of-intent/applicant-info/notice-of-intent-details/parcel/parcel.component.scss
@@ -2,6 +2,7 @@
   display: grid;
   grid-template-columns: max-content max-content max-content max-content max-content max-content;
   overflow-x: auto;
+  overflow-y: hidden;
   grid-column-gap: 36px;
   grid-row-gap: 12px;
 
