--- a/portal-frontend/src/app/features/home/home.component.html
+++ b/portal-frontend/src/app/features/home/home.component.html
@@ -19,7 +19,7 @@
       <button class="mobile-btn" (click)="onCreateApplication()" color="accent" mat-flat-button>+ Create New</button>
     </div>
   </div>
-  <div class="navigation-wrapper">
+  <div class="navigation">
     <mat-tab-group>
       <mat-tab label="Application">
         <app-warning-banner>
