Add NOI Change Type DIalog
* Add and hook up NOI change type dialog
* Update buttons on change application dialog to be more sensible

--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/change-noi-type-dialog/change-noi-type-dialog.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/change-noi-type-dialog/change-noi-type-dialog.component.html
@@ -1,46 +1,46 @@
 <div class="dialog-container">
   <div mat-dialog-title>
-    <h4>Change Application Type</h4>
+    <h4>Change NOI Type</h4>
   </div>
 
   <div mat-dialog-content class="change-app-type-modal">
     <div *ngIf="stepIdx === warningStep">
       <div class="step-body">
         <app-warning-banner>
-          <b>Warning:</b> Changing application type will remove some inputs from your saved progress. Do you want to
-          continue?
+          <b>Warning:</b> Changing the notice of intent type will remove some inputs from your saved progress. Do you
+          want to continue?
         </app-warning-banner>
       </div>
     </div>
 
     <div [ngClass]="{ 'display-none': stepIdx !== applicationTypeStep }">
-      <div class="step-description">Select an option to learn more about the application type.</div>
+      <div class="step-description">Select an option to learn more about the notice of intent type.</div>
       <mat-radio-group
         class="app-type-radio-group"
         aria-labelledby="radio-label"
-        (change)="onAppTypeSelected($event)"
+        (change)="onTypeSelected($event)"
         color="primary"
         required
       >
-        <mat-radio-button *ngFor="let appType of applicationTypes" [value]="appType.code" class="radio-option">
+        <mat-radio-button *ngFor="let appType of noiTypes" [value]="appType.code" class="radio-option">
           {{ appType.portalLabel }}
         </mat-radio-button>
       </mat-radio-group>
 
       <div *ngIf="stepIdx === applicationTypeStep">
-        <div id="warningBanner" class="warning-banner" *ngIf="selectedAppType">
+        <div id="warningBanner" class="warning-banner" *ngIf="selectedType">
           <div>
-            <b class="app-type-label">{{ selectedAppType.portalLabel }}</b>
+            <b class="app-type-label">{{ selectedType.portalLabel }}</b>
           </div>
           <div
-            id="appTypeDescription"
+            id="typeDescription"
             [ngClass]="{ 'ellipsis-3': !readMoreClicked }"
-            [innerHtml]="selectedAppType.htmlDescription"
+            [innerHtml]="selectedType.htmlDescription"
           ></div>
           <span
             class="read-more-btn"
             [ngClass]="{ 'display-none': !isReadMoreVisible }"
-            *ngIf="!!selectedAppType"
+            *ngIf="!!selectedType"
             (click)="onReadMoreClicked()"
             ><u>Read {{ readMoreClicked ? 'Less' : 'More' }}</u>
           </span>
@@ -50,13 +50,9 @@
 
     <div *ngIf="stepIdx === confirmationStep">
       <div class="step-header">
-        <h5>Are you sure you want to change your application type?</h5>
+        <h5>Are you sure you want to change your notice of intent type?</h5>
       </div>
     </div>
-
-    <ng-container *ngIf="stepIdx === prescribedBodyStep">
-      <app-presribed-body [value]="prescribedBody" (select)="onSelectPrescribedBody($event)"></app-presribed-body>
-    </ng-container>
   </div>
 </div>
 
@@ -68,18 +64,11 @@
 
   <div *ngIf="stepIdx === applicationTypeStep" class="dialog-controls-wrapper">
     <button mat-stroked-button color="primary" (click)="back()">back</button>
-    <button mat-flat-button color="primary" [disabled]="!selectedAppType" (click)="next()">next</button>
+    <button mat-flat-button color="primary" [disabled]="!selectedType" (click)="next()">next</button>
   </div>
 
   <div *ngIf="stepIdx === confirmationStep" class="dialog-controls-wrapper">
     <button mat-stroked-button color="primary" (click)="back()">back</button>
     <button mat-flat-button color="primary" (click)="onSubmit()">confirm</button>
-  </div>
-
-  <div class="dialog-controls-wrapper" *ngIf="stepIdx === prescribedBodyStep">
-    <button mat-stroked-button color="primary" (click)="back()">Back</button>
-    <button mat-flat-button color="primary" (click)="next()" [disabled]="!selectedAppType || !prescribedBody">
-      next
-    </button>
   </div>
 </div>
