--- a/portal-frontend/src/app/features/applications/view-submission/view-application-submission.component.html
+++ b/portal-frontend/src/app/features/applications/view-submission/view-application-submission.component.html
@@ -79,12 +79,7 @@
         </div>
         <div class="buttons" *ngIf="application">
           <div>
-            <button
-              *ngIf="application.canEdit"
-              mat-stroked-button
-              color="warn"
-              (click)="onCancel(application.fileNumber)"
-            >
+            <button *ngIf="application.canEdit" mat-stroked-button color="warn" (click)="onCancel(application.uuid)">
               Cancel Application
             </button>
           </div>
