inline dropdown to support disabled options

--- a/alcs-frontend/src/app/shared/inline-editors/inline-dropdown/inline-dropdown.component.html
+++ b/alcs-frontend/src/app/shared/inline-editors/inline-dropdown/inline-dropdown.component.html
@@ -20,7 +20,11 @@
   >
     <mat-form-field appearance="outline">
       <mat-select [multiple]="multiple" placeholder="Select a value" [(ngModel)]="pendingValue">
-        <mat-option *ngFor="let option of options" [value]="option.value">
+        <mat-option
+          *ngFor="let option of options"
+          [value]="option.value"
+          [disabled]="option.disabled !== null && option.disabled !== undefined ? option.disabled : false"
+        >
           {{ option.label }}
         </mat-option>
       </mat-select>
