--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pfrs-details/pfrs-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/pfrs-details/pfrs-details.component.html
@@ -48,8 +48,32 @@
 
   <div *ngIf="_noiSubmission" class="full-width soil-table">
     <div></div>
-    <div><strong>Soil to be Removed</strong></div>
-    <div><strong>Fill to be Placed</strong></div>
+    <div>
+      <strong
+        >Soil to be Removed
+        <app-updated-banner
+          *ngIf="
+            updatedFields.includes('soilToRemoveVolume') ||
+            updatedFields.includes('soilToRemoveArea') ||
+            updatedFields.includes('soilToRemoveMaximumDepth') ||
+            updatedFields.includes('soilToRemoveAverageDepth')
+          "
+        ></app-updated-banner>
+      </strong>
+    </div>
+    <div>
+      <strong
+        >Fill to be Placed
+        <app-updated-banner
+          *ngIf="
+            updatedFields.includes('soilToPlaceVolume') ||
+            updatedFields.includes('soilToPlaceArea') ||
+            updatedFields.includes('soilToPlaceMaximumDepth') ||
+            updatedFields.includes('soilToPlaceAverageDepth')
+          "
+        ></app-updated-banner>
+      </strong>
+    </div>
 
     <div><strong>Volume</strong></div>
     <div>
@@ -102,8 +126,32 @@
     <div class="spacer-row"></div>
 
     <div></div>
-    <div><strong>Soil already Removed</strong></div>
-    <div><strong>Fill already Placed</strong></div>
+    <div>
+      <strong
+        >Soil already Removed
+        <app-updated-banner
+          *ngIf="
+            updatedFields.includes('soilAlreadyRemovedVolume') ||
+            updatedFields.includes('soilAlreadyRemovedArea') ||
+            updatedFields.includes('soilAlreadyRemovedMaximumDepth') ||
+            updatedFields.includes('soilAlreadyPlacedAverageDepth')
+          "
+        ></app-updated-banner>
+      </strong>
+    </div>
+    <div>
+      <strong
+        >Fill already Placed
+        <app-updated-banner
+          *ngIf="
+            updatedFields.includes('soilAlreadyPlacedVolume') ||
+            updatedFields.includes('soilAlreadyPlacedArea') ||
+            updatedFields.includes('soilAlreadyPlacedMaximumDepth') ||
+            updatedFields.includes('soilAlreadyPlacedAverageDepth')
+          "
+        ></app-updated-banner>
+      </strong>
+    </div>
 
     <div><strong>Volume</strong></div>
     <div>
@@ -170,14 +218,16 @@
     <h4>Project Duration</h4>
   </div>
   <div class="subheading2 grid-1">
-    Duration <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
+    Duration
+    <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _noiSubmission.soilProjectDurationUnit }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilProjectDurationUnit"></app-no-data>
   </div>
   <div class="subheading2 grid-1">
-    Length <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
+    Length
+    <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _noiSubmission.soilProjectDurationAmount }}
@@ -192,7 +242,10 @@
     <app-no-data [showRequired]="showErrors" *ngIf="proposalMap.length === 0"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Is your proposal for area-wide filling?</div>
+  <div class="subheading2 grid-1">
+    Is your proposal for area-wide filling?
+    <app-updated-banner *ngIf="updatedFields.includes('soilIsAreaWideFilling')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     <span *ngIf="_noiSubmission.soilIsAreaWideFilling !== null">
       {{ _noiSubmission.soilIsAreaWideFilling ? 'Yes' : 'No' }}
@@ -200,7 +253,10 @@
     <app-no-data [showRequired]="showErrors" *ngIf="_noiSubmission.soilIsAreaWideFilling === null"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Is your proposal for aggregate extraction or placer mining?</div>
+  <div class="subheading2 grid-1">
+    Is your proposal for aggregate extraction or placer mining?
+    <app-updated-banner *ngIf="updatedFields.includes('soilIsExtractionOrMining')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     <span *ngIf="_noiSubmission.soilIsExtractionOrMining !== null">
       {{ _noiSubmission.soilIsExtractionOrMining ? 'Yes' : 'No' }}
@@ -228,6 +284,7 @@
     <ng-container *ngIf="_noiSubmission.soilIsExtractionOrMining">
       <div class="subheading2 grid-1">
         Have you submitted a Notice of Work to the Ministry of Energy, Mines and Low Carbon Innovation (EMLI)?
+        <app-updated-banner *ngIf="updatedFields.includes('soilHasSubmittedNotice')"></app-updated-banner>
       </div>
       <div class="grid-double">
         <span *ngIf="_noiSubmission.soilHasSubmittedNotice !== null">
