--- a/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/notice-of-intent-details/roso-details/roso-details.component.html
@@ -74,7 +74,14 @@
     <div class="grid-1"></div>
     <div class="grid-2">
       <strong>Soil already Removed</strong>
-      <app-updated-banner *ngIf="updatedFields.includes('subdProposedLots')"></app-updated-banner>
+      <app-updated-banner
+        *ngIf="
+          updatedFields.includes('soilAlreadyRemovedVolume') ||
+          updatedFields.includes('soilAlreadyRemovedArea') ||
+          updatedFields.includes('soilAlreadyRemovedMaximumDepth') ||
+          updatedFields.includes('soilAlreadyRemovedAverageDepth')
+        "
+      ></app-updated-banner>
     </div>
     <div class="grid-1"><strong>Volume</strong></div>
     <div class="grid-2">
@@ -112,14 +119,16 @@
     <h4>Project Duration</h4>
   </div>
   <div class="subheading2 grid-1">
-    Duration <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
+    Duration
+    <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationUnit')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _noiSubmission.soilProjectDurationUnit }}
     <app-no-data [showRequired]="showErrors" *ngIf="!_noiSubmission.soilProjectDurationUnit"></app-no-data>
   </div>
   <div class="subheading2 grid-1">
-    Length <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
+    Length
+    <app-updated-banner *ngIf="updatedFields.includes('soilProjectDurationAmount')"></app-updated-banner>
   </div>
   <div class="grid-double">
     {{ _noiSubmission.soilProjectDurationAmount }}
@@ -134,7 +143,10 @@
     <app-no-data [showRequired]="showErrors" *ngIf="proposalMap.length === 0"></app-no-data>
   </div>
 
-  <div class="subheading2 grid-1">Is your proposal for aggregate extraction or placer mining?</div>
+  <div class="subheading2 grid-1">
+    Is your proposal for aggregate extraction or placer mining?
+    <app-updated-banner *ngIf="updatedFields.includes('soilIsExtractionOrMining')"></app-updated-banner>
+  </div>
   <div class="grid-double">
     <span *ngIf="_noiSubmission.soilIsExtractionOrMining !== null">
       {{ _noiSubmission.soilIsExtractionOrMining ? 'Yes' : 'No' }}
@@ -161,6 +173,7 @@
 
     <div class="subheading2 grid-1">
       Have you submitted a Notice of Work to the Ministry of Energy, Mines and Low Carbon Innovation (EMLI)?
+      <app-updated-banner *ngIf="updatedFields.includes('soilHasSubmittedNotice')"></app-updated-banner>
     </div>
     <div class="grid-double">
       <span *ngIf="_noiSubmission.soilHasSubmittedNotice !== null">
