MR comments + fix for loading owners with standard BCEID

--- a/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
+++ b/portal-frontend/src/app/features/notice-of-intents/edit-submission/review-and-submit/submit-confirmation-dialog/submit-confirmation-dialog.component.html
@@ -7,7 +7,7 @@
   <div>
     <div class="subheading2">Terms and Conditions:</div>
     <mat-checkbox #checkbox1 color="primary" class="checkbox">
-      I/we consent to the use of the information provided in the application and all supporting documents to process the
+      I/we consent to the use of the information provided in the Notice of Intent and all supporting documents to process the
       application in accordance with the Agricultural Land Commission Act, the Agricultural Land Reserve General
       Regulation, and the Agricultural Land Reserve Use Regulation.
     </mat-checkbox>
