Set documents on NFUP Component in ALCS Edit Submission

--- a/portal-frontend/src/app/features/applications/alcs-edit-submission/alcs-edit-submission.component.html
+++ b/portal-frontend/src/app/features/applications/alcs-edit-submission/alcs-edit-submission.component.html
@@ -80,6 +80,7 @@
       <app-nfu-proposal
         *ngIf="applicationSubmission.typeCode === 'NFUP'"
         [$applicationSubmission]="$applicationSubmission"
+        [$applicationDocuments]="$applicationDocuments"
         [showErrors]="showValidationErrors"
         [draftMode]="true"
         (navigateToStep)="switchStep($event)"
